Add new Attributes for user class and hash user password for every signup operation
